# free-genai-bootcamp-2025

./: .gitignore  backend-tech-spec.md  frontend-tech-spec.md
backend-go-not-used/: frontend-tech-spec.md  go.sum  tasks-breakdown.md
genai-architecting/: Readme.md
listening-comp/: .env.example  README copy.md  check_azure_deployments.py  check_env.py  docker-compose.yml  list_azure_deployments.py  pyproject.toml  requirement-analysis.md  tech-spec.md  update_env.py  update_whisper_env.py
listening-comp/backend/components/: chat.py  interactive_learning.py  ocr_extraction.py  rag_implementation.py  structured_data.py  whisper_transcript.py  youtube_transcript.py
listening-comp/backend/utils/: vector_store_utils.py
listening-comp/frontend/: app.py
listening-comp/frontend/static/: styles.css
listening-comp/output/structured-data/: structured_1740868485.json  structured_1740924550.json  structured_1740925323.json
listening-comp/output/transcript-ocr/: j1YL56zE7kk_ocr.txt  xo2JBr0x58Q_ocr.txt
listening-comp/output/transcript-vid/: j1YL56zE7kk_whisper.txt  xo2JBr0x58Q.f140.m4a  xo2JBr0x58Q_whisper.txt
listening-comp/output/transcript-yt/: j1YL56zE7kk_transcript.txt  xo2JBr0x58Q_transcript.txt
listening-comp/scripts/: setup.sh  start_qdrant.sh
listening-comp/tesseract-service/: .gitignore  Dockerfile  README.md  app.py  build-and-run.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup-dev.sh
opea-comps/: README.md  compose_text-generation.yaml  curl_example.sh  direct_llm_test.py  scribble.md
voccab-importer/: README.md  package-lock.json  (+4 more)
(+321 files in other folders)
